--- a/templates/default/stripe_preferences.html.twig
+++ b/templates/default/stripe_preferences.html.twig
@@ -1,143 +1,138 @@
 {% extends 'page.html.twig' %}
 
 {% block content %}
+    <form action="{{ url_for("store_stripe_preferences") }}" method="post" enctype="multipart/form-data" class="ui form">
+        {% if not stripe.isLoaded() %}
+            <div id="errorbox">
+                <h1>{{ _T("- ERROR -") }}</h1>
+            </div>
+        {% endif %}
+        <div class="ui styled fluid accordion field">
+            <div class="active title">
+                <i class="icon dropdown"></i>
+                {{ _T("Stripe preferences", "stripe") }}
+            </div>
+            <div class="active content">
+                {%if login.isAdmin() %}
+                    <p>
+                        <label class="bline">{{ _T("Stripe Webhook URL:", "stripe") }}</label>
+                        <span>{{ url_for("slash") }}{{webhook_url}}</span>
+                    </p>
+                    <p>
+                        <label class="bline">{{ _T("Stripe Webhook events:", "stripe") }}</label>
+                        <span>payment_intent.succeeded, invoice.payment_succeeded</span>
+                    </p>
 
-	<form action="{{ url_for("store_stripe_preferences") }}" method="post" enctype="multipart/form-data" class="ui form">
-		{% if not stripe.isLoaded() %}
-			<div id="errorbox">
-				<h1>{{ _T("- ERROR -") }}</h1>
-			</div>
-		{% endif %}
-		<div class="ui styled fluid accordion field">
-			<div class="active title">
-				<i class="icon dropdown"></i>
-				{{ _T("Stripe preferences", "stripe") }}
-			</div>
-			<div class="active content">
-				{%if login.isAdmin() %}
-					<p>
-						<label class="bline">{{ _T("Stripe Webhook URL:", "stripe") }}</label>
-						<span>{{ url_for("slash") }}{{webhook_url}}</span>
-					</p>
-					<p>
-						<label class="bline">{{ _T("Stripe Webhook events:", "stripe") }}</label>
-						<span>payment_intent.succeeded, invoice.payment_succeeded</span>
-					</p>
+                    {% include "components/forms/text.html.twig" with {
+                        id: 'stripe_pubkey',
+                        value: stripe.getPubKey(),
+                        label: _T("Stripe public key:", "stripe") ,
+                        required: true,
+                        tip: _T("Enter here your Stripe public key.", "stripe")
+                    } %}
 
+                    {% include "components/forms/text.html.twig" with {
+                        id: 'stripe_privkey',
+                        value: stripe.getPrivKey(),
+                        label: _T("Stripe secret key:", "stripe") ,
+                        required: true,
+                        tip: _T("Enter here your Stripe secret key.", "stripe")
+                    } %}
 
-					{% include "components/forms/text.html.twig" with {
-                    id: 'stripe_pubkey',
-                    value: stripe.getPubKey(),
-                    label: _T("Stripe public key:", "stripe") ,
-                    required: true,
-                    tip: _T("Enter here your Stripe public key.", "stripe")
-                } %}
+                    {% include "components/forms/text.html.twig" with {
+                        id: 'stripe_webhook_secret',
+                        value: stripe.getWebhookSecret(),
+                        label: _T("Stripe webhook secret:", "stripe") ,
+                        required: true,
+                        tip: _T("Enter here your Stripe webhook secret.", "stripe")
+                    } %}
 
-					{% include "components/forms/text.html.twig" with {
-                    id: 'stripe_privkey',
-                    value: stripe.getPrivKey(),
-                    label: _T("Stripe secret key:", "stripe") ,
-                    required: true,
-                    tip: _T("Enter here your Stripe secret key.", "stripe")
-                } %}
+                    {% include "components/forms/select.html.twig" with {
+                        id: 'stripe_country',
+                        value: stripe.getCountry(),
+                        values: countries,
+                        label: _T("Country of your Stripe account:", "stripe") ,
+                        required: true,
+                        tip: _T("Enter here the country of your Stripe account.", "stripe")
+                    } %}
 
+                    {% include "components/forms/select.html.twig" with {
+                        id: 'stripe_currency',
+                        value: stripe.getCurrency(),
+                        values: currencies,
+                        label: _T("Currency for payments:", "stripe") ,
+                        required: true,
+                        tip: _T("Enter here the currency used to capture payments.", "stripe")
+                    } %}
+                    {#
+                    <p>
+                        <label for="stripe_country" class="bline">{{ _T("", "stripe") }}</label>
+                        <span class="tip">{{ _T("Enter here the country of your Stripe account.", "stripe") }}</span>
+                        <select name="stripe_country" id="stripe_country">
+                            {% for country_code, country_name in countries %}
+                                <option value="{{country_code}}" {%if country_code==stripe.getCountry()%} selected {%endif%}>{{country_name}}</option>
+                            {% endfor %}
+                        </select>
+                    </p>
+                    <p>
+                        <label for="stripe_currency" class="bline">{{ _T("Currency for payments:", "stripe") }}</label>
+                        <span class="tip">{{ _T("Enter here the currency used to capture payments.", "stripe") }}</span>
+                        <select name="stripe_currency" id="currency">
+                            {% for currency_code, currency_label in currencies %}
+                                <option value="{{currency_code}}" {%if currency_code==stripe.getCurrency()%} selected {%endif%}>{{currency_label}}</option>
+                            {%endfor%}
+                        </select>
+                    </p>
+                    #}
+                {% endif %}
+                <p>
+                    *{{ _T("NB : The mandatory fields are in", "stripe") }}
+                    <span class="required">{{ _T("red", "stripe") }}</span>
+                </p>
+                <br>
+                {% if stripe.areAmountsLoaded() and amounts|length > 0 %}
+                    <table class="listing ui celled striped table">
+                            <thead>
+                                <tr>
+                                    <th class="listing">{{ _T("Contribution type")}}</th>
+                                    <th class="listing">{{ _T("Amount")}}</th>
+                                    <th class="listing collapsing">{{ _T("Inactive")}}</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for k, amount in amounts %}
+                                    <tr>
+                                        <td>
+                                            <input type="hidden" name="amount_id[]" id="amount_id_{{ k }}" value="{{ k }}"/>
+                                            <label for="amount_{{ k }}">{{ amount['name'] }}</label>
+                                        </td>
+                                        <td>
+                                            <input type="text" name="amounts[]" id="amount_{{ k }}" value="{{ amount['amount']|number_format(2, ',', '') }}"/>
+                                        </td>
+                                        <td class="collapsing">
+                                             <div class="ui right aligned toggle checkbox">
+                                                <input type="checkbox" name="inactives[]" id="inactives_{{ k }}" {% if stripe.isInactive(k) %} checked="checked" {% endif %} value="{{ k }}"/>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
+                    </table>
+                {% else %}
+                    <p>{{ _T("Error: no predefined amounts found.", "stripe") }}</p>
+                {% endif %}
+            </div>
+        </div>
 
-					{% include "components/forms/text.html.twig" with {
-                    id: 'stripe_webhook_secret',
-                    value: stripe.getWebhookSecret(),
-                    label: _T("Stripe webhook secret:", "stripe") ,
-                    required: true,
-                    tip: _T("Enter here your Stripe webhook secret.", "stripe")
-                } %}
+        <div class="ui basic center aligned segment">
+            <button type="submit" class="ui labeled icon primary button action">
+                <i class="save icon"></i>
+                {{ _T("Save") }}
+            </button>
+            <input type="hidden" name="valid" value="1"/>
+            {% include "components/forms/csrf.html.twig" %}
+        </div>
+    </form>
+{% endblock %}
 
-					{% include "components/forms/select.html.twig" with {
-                    id: 'stripe_country',
-					value: stripe.getCountry(),
-                    values: countries,
-                    label: _T("Country of your Stripe account:", "stripe") ,
-                    required: true,
-                    tip: _T("Enter here the country of your Stripe account.", "stripe")
-                } %}
-					{% include "components/forms/select.html.twig" with {
-                    id: 'stripe_currency',
-					value: stripe.getCurrency(),
-                    values: currencies,
-                    label: _T("Currency for payments:", "stripe") ,
-                    required: true,
-                    tip: _T("Enter here the currency used to capture payments.", "stripe")
-                } %}
-					{#
-										<p>
-											<label for="stripe_country" class="bline">{{ _T("", "stripe") }}</label>
-											<span class="tip">{{ _T("Enter here the country of your Stripe account.", "stripe") }}</span>
-											<select name="stripe_country" id="stripe_country">
-												{% for country_code, country_name in countries %}
-													<option value="{{country_code}}" {%if country_code==stripe.getCountry()%} selected {%endif%}>{{country_name}}</option>
-												{% endfor %}
-											</select>
-										</p>
-										<p>
-											<label for="stripe_currency" class="bline">{{ _T("Currency for payments:", "stripe") }}</label>
-											<span class="tip">{{ _T("Enter here the currency used to capture payments.", "stripe") }}</span>
-											<select name="stripe_currency" id="currency">
-					
-												{% for currency_code, currency_label in currencies %}
-													<option value="{{currency_code}}" {%if currency_code==stripe.getCurrency()%} selected {%endif%}>{{currency_label}}</option>
-													{%endfor%}
-												</select>
-											</p>
-										</p>
-										#}
-
-				{% endif %}
-				<p>*{{ _T("NB : The mandatory fields are in", "stripe") }}
-					<span class="required">{{ _T("red", "stripe") }}</span>
-				</p>
-				<br>
-				{%if stripe.areAmountsLoaded() and amounts|length > 0%}
-					<table class="listing ui celled striped table">
-						<thead>
-							<tr>
-								<th class="listing">{{ _T("Contribution type")}}</th>
-								<th class="listing">{{ _T("Amount")}}</th>
-								<th class="listing">{{ _T("Inactive")}}</th>
-							</tr>
-						</thead>
-						<tbody>
-							{% for k, amount in amounts %}
-								<tr>
-									<td>
-										<input type="hidden" name="amount_id[]" id="amount_id_{{ k }}" value="{{ k }}"/>
-										<label for="amount_{{ k }}">{{ amount['name'] }}</label>
-									</td>
-									<td>
-										<input type="text" name="amounts[]" id="amount_{{ k }}" value="{{ amount['amount']|number_format(2, ',', '') }}"/>
-									</td>
-									<td>
-										<input type="checkbox" name="inactives[]" id="inactives_{{ k }}" {% if stripe.isInactive(k) %} checked="checked" {% endif %} value="{{ k }}"/>
-									</td>
-								</tr>
-							{% endfor %}
-						</tbody>
-					</table>
-				</fieldset>
-				{%else%}
-				<p>{{ _T("Error: no predefined amounts found.", "stripe") }}</p>
-				{%endif%}
-
-
-				<div class="ui basic center aligned segment">
-					<button type="submit" class="ui labeled icon primary button action">
-						<i class="save icon"></i>
-						{{ _T("Save") }}
-					</button>
-					<input type="hidden" name="valid" value="1"/>
-					{% include "components/forms/csrf.html.twig" %}
-				</div>
-
-
-			</div>
-		</form>
-	{% endblock %}
-
-	{%block javascripts %}{% endblock %}
+{%block javascripts %}{% endblock %}
