--- a/templates/default/stripe_form_checkout.html.twig
+++ b/templates/default/stripe_form_checkout.html.twig
@@ -1,164 +1,171 @@
 {% extends '@PluginGaletteStripe/stripe_form_base.html.twig' %}
 
-
 {% block content %}
-<form action="" method="post" id="payment-form" class="ui form">
-	<fieldset>
-		<legend class="ui-state-active ui-corner-top">{{ _T("Stripe payment", "stripe") }}</legend>
-		<div id="messages"></div>
-		<div class="stripe-flex">
-			<div class="stripe-column">
-            {% if metadata %}
-				<div class="stripe-row">
-					<strong>{{ metadata.adherent_name }}</strong><br>
-                                {% if metadata.adherent_company %}{{ metadata.adherent_company }}<br>
-					{% endif %}
-					{{ metadata.adherent_address_1 }}<br>
-					{% if metadata.adherent_country %}
-						{#{{ metadata.adherent_address_2}}<br>#}
-					{% endif %}
-					{{ metadata.adherent_zip }}
-					{{ metadata.adherent_town }}<br>
-					{% if metadata.adherent_country %}
-						{{ metadata.adherent_country }}
-					{% endif %}
-				</div>
-            {% endif %}
-                <div class="stripe-row">
-                    <strong>{{ item_name }}</strong><br>
-                    <strong>{{ amount/100.0 }}
-                        {{ stripe.getCurrency() }}</strong><br>
+    <form action="" method="post" id="payment-form" class="ui form">
+        <div class="ui segment">
+            <div class="ui inverted secondary big segment">
+                <div class="ui large center aligned header">
+                    {{ amount/100.0 }} {{ stripe.getCurrency() }}
+                    <div class="sub header">{{ item_name }}</div>
                 </div>
             </div>
-            <div class="stripe-column">
-                <div class="stripe-row">
-                    <label for="stripe-card-number" data-tid="elements.form.card_number_label">{{ _T("Card number", "stripe") }}</label>
-                    <div id="stripe-card-number" class="input empty"></div>
+            <div class="ui two column stackable grid basic fitted segment">
+                <div class="column">
+                    <h2 class="ui horizontal left aligned divider tiny header">
+                        <i class="address card outline icon"></i>
+                        {{ _T("Contact details", "stripe") }}
+                    </h2>
+                    {% if metadata %}
+                        <strong>{{ metadata.adherent_name }}</strong><br>
+                        {% if metadata.adherent_company %}
+                            {{ metadata.adherent_company }}<br>
+                        {% endif %}
+                        {{ metadata.adherent_address_1 }}<br>
+                        {% if metadata.adherent_country %}
+                            {#{{ metadata.adherent_address_2}}<br>#}
+                        {% endif %}
+                        {{ metadata.adherent_zip }}
+                        {{ metadata.adherent_town }}<br>
+                        {% if metadata.adherent_country %}
+                            {{ metadata.adherent_country }}
+                        {% endif %}
+                    {% endif %}
                 </div>
-                <div class="stripe-row">
-                    <label for="stripe-card-expiry" data-tid="elements.form.card_expiry_label">{{ _T("Expiration", "stripe") }}</label>
-                    <div id="stripe-card-expiry" class="input empty"></div>
-                </div>
-                <div class="stripe-row">
-                    <label for="stripe-card-cvc" data-tid="elements.form.card_cvc_label">{{ _T("CVC", "stripe") }}</label>
-                    <div id="stripe-card-cvc" class="input empty"></div>
-                </div>
-                <div class="stripe-row">
-                    <button type="submit" data-tid="elements.form.pay_button">{{ _T("Pay", "stripe") }}</button>
-                    <div class="stripe-loader" style="display:none;">Loading...</div>
+                <div class="column">
+                    <h2 class="ui horizontal left aligned divider tiny header">
+                        <i class="credit card outline icon"></i>
+                        {{ _T("Payment details", "stripe") }}
+                    </h2>
+                    <div id="messages"></div>
+                    <div class="field">
+                        <label for="stripe-card-number" data-tid="elements.form.card_number_label">{{ _T("Card number", "stripe") }}</label>
+                        <div id="stripe-card-number" class="input empty"></div>
+                    </div>
+                    <div class="field">
+                        <label for="stripe-card-expiry" data-tid="elements.form.card_expiry_label">{{ _T("Expiration", "stripe") }}</label>
+                        <div id="stripe-card-expiry" class="input empty"></div>
+                    </div>
+                    <div class="field">
+                        <label for="stripe-card-cvc" data-tid="elements.form.card_cvc_label">{{ _T("CVC", "stripe") }}</label>
+                        <div id="stripe-card-cvc" class="input empty"></div>
+                    </div>
+                    <div class="field">
+                        <button type="submit" data-tid="elements.form.pay_button" class="ui labeled icon primary fluid large button action">
+                            {{ _T("Pay", "stripe") }}
+                        </button>
+                        <div class="stripe-loader" style="display:none;">Loading...</div>
+                    </div>
                 </div>
             </div>
         </div>
-    </fieldset>
-</form>
-
+    </form>
 {% endblock %}
 
 {% block javascripts %}
-{% if stripe.isLoaded() and stripe.getPubKey() != null and stripe.getPrivKey() != null and stripe.areAmountsLoaded() %}
-<script src="https://js.stripe.com/v3/"></script>
-<script type="text/javascript">
-    $(function() {
-        var stripe = Stripe('{{ stripe.getPubKey() }}', {});
+    {% if stripe.isLoaded() and stripe.getPubKey() != null and stripe.getPrivKey() != null and stripe.areAmountsLoaded() %}
+        <script src="https://js.stripe.com/v3/"></script>
+        <script type="text/javascript">
+            $(function() {
+                var stripe = Stripe('{{ stripe.getPubKey() }}', {});
 
-        var elementStyles = {
-            base: {
-                color: '#32325D',
-                fontWeight: 500,
-                fontFamily: 'Source Code Pro, Consolas, Menlo, monospace',
-                fontSize: '16px',
-                fontSmoothing: 'antialiased',
+                var elementStyles = {
+                    base: {
+                        color: '#32325D',
+                        fontWeight: 500,
+                        fontFamily: 'Source Code Pro, Consolas, Menlo, monospace',
+                        fontSize: '16px',
+                        fontSmoothing: 'antialiased',
 
-                '::placeholder': {
-                    color: '#CFD7DF',
-                },
-                ':-webkit-autofill': {
-                    color: '#e39f48',
-                },
-            },
-            invalid: {
-                color: '#E25950',
+                        '::placeholder': {
+                            color: '#CFD7DF',
+                        },
+                        ':-webkit-autofill': {
+                            color: '#e39f48',
+                        },
+                    },
+                    invalid: {
+                        color: '#E25950',
 
-                '::placeholder': {
-                    color: '#FFCCA5',
-                },
-            },
-        };
+                        '::placeholder': {
+                            color: '#FFCCA5',
+                        },
+                    },
+                };
 
-        var elementClasses = {
-            focus: 'focused',
-            empty: 'empty',
-            invalid: 'invalid',
-        };
+                var elementClasses = {
+                    focus: 'focused',
+                    empty: 'empty',
+                    invalid: 'invalid',
+                };
 
-        // Create button from Stripe Elements
-        var elements = stripe.elements();
+                // Create button from Stripe Elements
+                var elements = stripe.elements();
 
-        var cardNumber = elements.create('cardNumber', {
-            style: elementStyles,
-            classes: elementClasses,
-        });
-        cardNumber.mount('#stripe-card-number');
+                var cardNumber = elements.create('cardNumber', {
+                    style: elementStyles,
+                    classes: elementClasses,
+                });
+                cardNumber.mount('#stripe-card-number');
 
-        var cardExpiry = elements.create('cardExpiry', {
-            style: elementStyles,
-            classes: elementClasses,
-        });
-        cardExpiry.mount('#stripe-card-expiry');
+                var cardExpiry = elements.create('cardExpiry', {
+                    style: elementStyles,
+                    classes: elementClasses,
+                });
+                cardExpiry.mount('#stripe-card-expiry');
 
-        var cardCvc = elements.create('cardCvc', {
-            style: elementStyles,
-            classes: elementClasses,
-        });
-        cardCvc.mount('#stripe-card-cvc');
+                var cardCvc = elements.create('cardCvc', {
+                    style: elementStyles,
+                    classes: elementClasses,
+                });
+                cardCvc.mount('#stripe-card-cvc');
 
-        var form = document.getElementById('payment-form');
+                var form = document.getElementById('payment-form');
 
-        // Create payment request
-        var paymentRequest = stripe.paymentRequest({
-            country: '{{ stripe.getCountry() }}',
-            currency: '{{ stripe.getCurrency() }}',
-            total: {
-                label: '{{ item_name }}',
-                amount: {{ amount }},
-            },
-            requestPayerName: true,
-            requestPayerEmail: true,
-        });
+                // Create payment request
+                var paymentRequest = stripe.paymentRequest({
+                    country: '{{ stripe.getCountry() }}',
+                    currency: '{{ stripe.getCurrency() }}',
+                    total: {
+                        label: '{{ item_name }}',
+                        amount: {{ amount }},
+                    },
+                    requestPayerName: true,
+                    requestPayerEmail: true,
+                });
 
-        form.addEventListener('submit', function(ev) {
-            ev.preventDefault();
-            jQuery(this).find('input').prop('disabled', true);
-            jQuery(this).find('button[type="submit"]').hide();
-            jQuery(this).find('.stripe-loader').show();
-            stripe.confirmCardPayment('{{ client_secret }}', {
-                payment_method: {
-                    card: cardNumber,
-                    billing_details: {
-                        name: '{{ metadata.adherent_name }}',
-                        email: '{{ metadata.adherent_email }}'
-                    }
-                }
-            }).then(function(result) {
-                if (result.error !== undefined && result.error !== null && result.error !== '') {
-                    jQuery('#messages').html('<div id="errorbox"></div>');
-                    jQuery('#messages #errorbox').text(result.error.message);
-                    jQuery(form).find('input').prop('disabled', false);
-                    jQuery(form).find('button[type="submit"]').show();
-                    jQuery(form).find('.stripe-loader').hide();
-                } else {
-                    // The payment has been processed!
-                    if (result.paymentIntent.status === 'succeeded') {
-                        jQuery('#messages').html('<div id="successbox"></div>');
-                        jQuery('#messages #successbox').text('{{ _T("Payment successful", "stripe") }}');
-                        jQuery(form).find('input').hide();
-                        jQuery(form).find('.stripe-loader').hide();
-                    }
-                }
+                form.addEventListener('submit', function(ev) {
+                    ev.preventDefault();
+                    jQuery(this).find('input').prop('disabled', true);
+                    jQuery(this).find('button[type="submit"]').hide();
+                    jQuery(this).find('.stripe-loader').show();
+                    stripe.confirmCardPayment('{{ client_secret }}', {
+                        payment_method: {
+                            card: cardNumber,
+                            billing_details: {
+                                name: '{{ metadata.adherent_name }}',
+                                email: '{{ metadata.adherent_email }}'
+                            }
+                        }
+                    }).then(function(result) {
+                        if (result.error !== undefined && result.error !== null && result.error !== '') {
+                            jQuery('#messages').html('<div id="errorbox"></div>');
+                            jQuery('#messages #errorbox').text(result.error.message);
+                            jQuery(form).find('input').prop('disabled', false);
+                            jQuery(form).find('button[type="submit"]').show();
+                            jQuery(form).find('.stripe-loader').hide();
+                        } else {
+                            // The payment has been processed!
+                            if (result.paymentIntent.status === 'succeeded') {
+                                jQuery('#messages').html('<div id="successbox"></div>');
+                                jQuery('#messages #successbox').text('{{ _T("Payment successful", "stripe") }}');
+                                jQuery(form).find('input').hide();
+                                jQuery(form).find('.stripe-loader').hide();
+                            }
+                        }
+                    });
+                });
+
             });
-        });
-
-    });
-</script>
-{% endif %}
+        </script>
+    {% endif %}
 {% endblock %}
