--- a/templates/default/stripe_preferences.html.twig
+++ b/templates/default/stripe_preferences.html.twig
@@ -3,8 +3,17 @@
 {% block content %}
     <form action="{{ url_for("store_stripe_preferences") }}" method="post" enctype="multipart/form-data" class="ui form">
         {% if not stripe.isLoaded() %}
-            <div id="errorbox">
-                <h1>{{ _T("- ERROR -") }}</h1>
+            <div id="errorbox" class="ui error icon visible message">
+                <i class="exclamation circle icon" aria-hidden="true"></i>
+                <div class="content">
+                    <div class="header">
+                        {{ _T("Cannot load the preferences", "stripe") }}
+                    </div>
+                    <p>
+                        {{ _T("An error occured while loading the preferences from database.", "stripe") }}<br/>
+                        {{ _T("Please, check if the plugin's database has been properly initialized.", "stripe") }}
+                    </p>
+                </div>
             </div>
         {% endif %}
         <div class="ui styled fluid accordion field">
@@ -14,14 +23,14 @@
             </div>
             <div class="active content">
                 {%if login.isAdmin() %}
-                    <p>
-                        <label class="bline">{{ _T("Stripe Webhook URL:", "stripe") }}</label>
-                        <span>{{ url_for("slash") }}{{webhook_url}}</span>
-                    </p>
-                    <p>
-                        <label class="bline">{{ _T("Stripe Webhook events:", "stripe") }}</label>
-                        <span>payment_intent.succeeded, invoice.payment_succeeded</span>
-                    </p>
+                    <div class="inline field">
+                        <label>{{ _T("Stripe Webhook URL:", "stripe") }}</label>
+                        <code>{{ webhook_url }}</code>
+                    </div>
+                    <div class="inline field">
+                        <label>{{ _T("Stripe Webhook events:", "stripe") }}</label>
+                        <code>payment_intent.succeeded</code> {{ _T("and") }} <code>invoice.payment_succeeded</code>
+                    </div>
 
                     {% include "components/forms/text.html.twig" with {
                         id: 'stripe_pubkey',
@@ -64,59 +73,34 @@
                         required: true,
                         tip: _T("Enter here the currency used to capture payments.", "stripe")
                     } %}
-                    {#
-                    <p>
-                        <label for="stripe_country" class="bline">{{ _T("", "stripe") }}</label>
-                        <span class="tip">{{ _T("Enter here the country of your Stripe account.", "stripe") }}</span>
-                        <select name="stripe_country" id="stripe_country">
-                            {% for country_code, country_name in countries %}
-                                <option value="{{country_code}}" {%if country_code==stripe.getCountry()%} selected {%endif%}>{{country_name}}</option>
-                            {% endfor %}
-                        </select>
-                    </p>
-                    <p>
-                        <label for="stripe_currency" class="bline">{{ _T("Currency for payments:", "stripe") }}</label>
-                        <span class="tip">{{ _T("Enter here the currency used to capture payments.", "stripe") }}</span>
-                        <select name="stripe_currency" id="currency">
-                            {% for currency_code, currency_label in currencies %}
-                                <option value="{{currency_code}}" {%if currency_code==stripe.getCurrency()%} selected {%endif%}>{{currency_label}}</option>
-                            {%endfor%}
-                        </select>
-                    </p>
-                    #}
                 {% endif %}
-                <p>
-                    *{{ _T("NB : The mandatory fields are in", "stripe") }}
-                    <span class="required">{{ _T("red", "stripe") }}</span>
-                </p>
-                <br>
                 {% if stripe.areAmountsLoaded() and amounts|length > 0 %}
                     <table class="listing ui celled striped table">
-                            <thead>
+                        <thead>
+                            <tr>
+                                <th class="listing">{{ _T("Contribution type")}}</th>
+                                <th class="listing">{{ _T("Amount")}}</th>
+                                <th class="listing collapsing">{{ _T("Inactive")}}</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for k, amount in amounts %}
                                 <tr>
-                                    <th class="listing">{{ _T("Contribution type")}}</th>
-                                    <th class="listing">{{ _T("Amount")}}</th>
-                                    <th class="listing collapsing">{{ _T("Inactive")}}</th>
+                                    <td>
+                                        <input type="hidden" name="amount_id[]" id="amount_id_{{ k }}" value="{{ k }}"/>
+                                        <label for="amount_{{ k }}">{{ amount['name'] }}</label>
+                                    </td>
+                                    <td>
+                                        <input type="text" name="amounts[]" id="amount_{{ k }}" value="{{ amount['amount']|number_format(2, ',', '') }}"/>
+                                    </td>
+                                    <td class="collapsing">
+                                         <div class="ui right aligned toggle checkbox">
+                                            <input type="checkbox" name="inactives[]" id="inactives_{{ k }}" {% if stripe.isInactive(k) %} checked="checked" {% endif %} value="{{ k }}"/>
+                                        </div>
+                                    </td>
                                 </tr>
-                            </thead>
-                            <tbody>
-                                {% for k, amount in amounts %}
-                                    <tr>
-                                        <td>
-                                            <input type="hidden" name="amount_id[]" id="amount_id_{{ k }}" value="{{ k }}"/>
-                                            <label for="amount_{{ k }}">{{ amount['name'] }}</label>
-                                        </td>
-                                        <td>
-                                            <input type="text" name="amounts[]" id="amount_{{ k }}" value="{{ amount['amount']|number_format(2, ',', '') }}"/>
-                                        </td>
-                                        <td class="collapsing">
-                                             <div class="ui right aligned toggle checkbox">
-                                                <input type="checkbox" name="inactives[]" id="inactives_{{ k }}" {% if stripe.isInactive(k) %} checked="checked" {% endif %} value="{{ k }}"/>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                {% endfor %}
-                            </tbody>
+                            {% endfor %}
+                        </tbody>
                     </table>
                 {% else %}
                     <p>{{ _T("Error: no predefined amounts found.", "stripe") }}</p>
