--- a/templates/default/stripe_form_checkout.html.twig
+++ b/templates/default/stripe_form_checkout.html.twig
@@ -1,6 +1,9 @@
 {% extends '@PluginGaletteStripe/stripe_form_base.html.twig' %}
 
 {% block content %}
+
+    {{parent()}}
+
     <form action="" method="post" id="payment-form" class="ui form">
         <div class="ui segment">
             <div class="ui inverted secondary big segment">
@@ -9,26 +12,30 @@
                     <div class="sub header">{{ item_name }}</div>
                 </div>
             </div>
-            <div class="ui two column stackable grid basic fitted segment">
+            <div id="billing-details" class="ui two column stackable grid basic fitted segment">
                 <div class="column">
                     <h2 class="ui horizontal left aligned divider tiny header">
                         <i class="address card outline icon"></i>
-                        {{ _T("Contact details", "stripe") }}
+                        {{ _T("Billing details", "stripe") }}
                     </h2>
                     {% if metadata %}
-                        <strong>{{ metadata.adherent_name }}</strong><br>
-                        {% if metadata.adherent_company %}
-                            {{ metadata.adherent_company }}<br>
+                        <strong>{{ metadata.billing_name }}</strong><br>
+                        {% if metadata.billing_company != '' %}
+                            {{ metadata.billing_company }}<br>
                         {% endif %}
-                        {{ metadata.adherent_address_1 }}<br>
-                        {% if metadata.adherent_country %}
-                            {#{{ metadata.adherent_address_2}}<br>#}
+                        {% if metadata.billing_address != '' %}
+                            {{ metadata.billing_address }}<br>
                         {% endif %}
-                        {{ metadata.adherent_zip }}
-                        {{ metadata.adherent_town }}<br>
-                        {% if metadata.adherent_country %}
-                            {{ metadata.adherent_country }}
+                        {% if metadata.billing_zip != '' %}
+                            {{ metadata.billing_zip }}
                         {% endif %}
+                        {% if metadata.billing_town != '' %}
+                            {{ metadata.billing_town }}<br>
+                        {% endif %}
+                        {% if metadata.billing_country != '' %}
+                            {{ metadata.billing_country }}
+                        {% endif %}
+                        {{ metadata.billing_email }}
                     {% endif %}
                 </div>
                 <div class="column">
@@ -36,7 +43,7 @@
                         <i class="credit card outline icon"></i>
                         {{ _T("Payment details", "stripe") }}
                     </h2>
-                    <div id="messages"></div>
+                    <div id="error"></div>
                     <div class="field">
                         <label for="stripe-card-number" data-tid="elements.form.card_number_label">{{ _T("Card number", "stripe") }}</label>
                         <div id="stripe-card-number" class="input empty"></div>
@@ -50,13 +57,14 @@
                         <div id="stripe-card-cvc" class="input empty"></div>
                     </div>
                     <div class="field">
-                        <button type="submit" data-tid="elements.form.pay_button" class="ui labeled icon primary fluid large button action">
+                        <button type="submit" data-tid="elements.form.pay_button" class="ui primary fluid large button action">
                             {{ _T("Pay", "stripe") }}
                         </button>
                         <div class="stripe-loader" style="display:none;">Loading...</div>
                     </div>
                 </div>
             </div>
+            <div id="success"></div>
         </div>
     </form>
 {% endblock %}
@@ -135,31 +143,26 @@
 
                 form.addEventListener('submit', function(ev) {
                     ev.preventDefault();
-                    jQuery(this).find('input').prop('disabled', true);
-                    jQuery(this).find('button[type="submit"]').hide();
-                    jQuery(this).find('.stripe-loader').show();
+                    jQuery(this).find('button[type="submit"]').prop('disabled', true).addClass('loading');
                     stripe.confirmCardPayment('{{ client_secret }}', {
                         payment_method: {
                             card: cardNumber,
                             billing_details: {
-                                name: '{{ metadata.adherent_name }}',
-                                email: '{{ metadata.adherent_email }}'
+                                name: '{{ metadata.billing_name }}',
+                                email: '{{ metadata.billing_email }}'
                             }
                         }
                     }).then(function(result) {
                         if (result.error !== undefined && result.error !== null && result.error !== '') {
-                            jQuery('#messages').html('<div id="errorbox"></div>');
-                            jQuery('#messages #errorbox').text(result.error.message);
-                            jQuery(form).find('input').prop('disabled', false);
-                            jQuery(form).find('button[type="submit"]').show();
-                            jQuery(form).find('.stripe-loader').hide();
+                            jQuery('#error').html('<div class="ui icon visible negative center aligned message"><div class="content"></div></div>');
+                            jQuery('#error .content').text(result.error.message);
+                            jQuery(form).find('button[type="submit"]').prop('disabled', false).removeClass('loading');
                         } else {
                             // The payment has been processed!
                             if (result.paymentIntent.status === 'succeeded') {
-                                jQuery('#messages').html('<div id="successbox"></div>');
-                                jQuery('#messages #successbox').text('{{ _T("Payment successful", "stripe") }}');
-                                jQuery(form).find('input').hide();
-                                jQuery(form).find('.stripe-loader').hide();
+                                jQuery('#success').html('<div class="ui icon visible positive center aligned message"><div class="header"></div></div>');
+                                jQuery('#success .header').text('{{ _T("Payment successful", "stripe") }}');
+                                jQuery(form).find('#billing-details').remove();
                             }
                         }
                     });
