Disable form submit for superadmin

--- a/templates/default/stripe_form_amount.html.twig
+++ b/templates/default/stripe_form_amount.html.twig
@@ -114,7 +114,7 @@
         {% endif %}
 
                 <div class="ui basic center aligned fitted segment">
-                    <button type="submit" name="valid" class="action ui labeled icon primary button">
+                    <button type="submit" name="valid" class="action ui labeled icon primary button"{% if login.isSuperAdmin() %} disabled{% endif %}>
                         <i class="stripe icon"></i>
                         {{ _T("Pay with stripe") }}
                     </button>
